--- a/templates/cart.html
+++ b/templates/cart.html
@@ -5,42 +5,26 @@
 
     <table class="table table-striped">
         <thead>
-        <tr>
-            <th>Melon Name</th>
-            <th>Quantity</th>
-            <th>Price</th>
-            <th>Total</th>
-        </tr>
+            <tr>
+                <th>Melon Name</th>
+                <th>Quantity</th>
+                <th>Price</th>
+                <th>Total</th>
+            </tr>
         </thead>
         <tbody>
-        <tr>
-            <td>Ancient Watermelon</td>
-            <td>5</td>
-            <td>$3.00</td>
-            <td>$15.00</td>
-        </tr>
-        <tr>
-            <td>Charleston Gray</td>
-            <td>2</td>
-            <td>$2.00</td>
-            <td>$4.00</td>
-        </tr>
-        <tr>
-            <td>Crenshaw</td>
-            <td>1</td>
-            <td>$2.00</td>
-            <td>$2.00</td>
-        </tr>
-        <tr>
-            <td>Ledmon Watermelon</td>
-            <td>2</td>
-            <td>$3.00</td>
-            <td>$6.00</td>
-        </tr>
+            {% for melon_id in cart %}
+            <tr>
+                <th>{{melons.get_by_id(melon_id).common_name}}</th>
+                <th>{{cart[melon_id]}}</th>
+                <th>{{melons.get_by_id(melon_id).price}}</th>
+                <th>{{melons.get_by_id(melon_id).price*cart[melon_id]}}</th>
+            </tr>
+            {% endfor %}
         </tbody>
     </table>
 
-    <h3>Total: $27.00</h3>
+    <h3>Total: ${{total}}</h3>
 
     <a href="/checkout" class="btn btn-large btn-primary">Check Out</a>
 
