--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,11 @@
                         My Melon Cart
                     </a>
                 </li>
+                {% if not session["logged_in_customer_email"] %}
                 <li><a href="/login">Log In</a></li>
+                {% else %}
+                <li><a href="/logout">Log Out</a></li>
+                {% endif %}
             </ul>
         </div>
 
